<resources>
    <string name="app_name">ProconAnalytics</string>
    <string name="bemvindo">Bem vindo ao Procon Analytics</string>
    <string name="sobrePA">Aplicativo de pesquisa de preços do Procon João Pessoa</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_intro">Dashboard com gráficos de análise dos dados de todas as pesquisas de preço do Procon</string>
    <string name="top10_title">Top 10:</string>
    <string name="idPosto">Nome do Posto</string>
    <string name="idPreco">Preço Combustível</string>
    <string name="produto">Produto</string>
    <string name="idBairro">Bairro</string>
    <string name="idBandeira">Bandeira</string>
    <string name="top10_intro">Ranking com os 10 menores preços por tipo de combustível</string>
    <string name="preferences">Salve suas preferências</string>
    <string name="maps">Veja no mapa os postos com menor preço</string>
    <string name="mlprocon">Procon Analytics</string>
    <string name="contato">mlprocon@procon.jp</string>
    <string name="dashboard">Dashboard</string>
    <string name="login">Login</string>
    <string name="sobre">Sobre Procon Analytics</string>
    <string name="procon">Procon João Pessoa</string>
    <string name="analytics">Procon Analytics</string>
    <string name="sugestoes">Sugestões</string>
    <string name="top10">Top 10</string>
    <string name="map">Mapa</string>
    <string name="emailLogin">E-mail</string>
    <string name="password">Senha</string>
    <string name="checkLogin">Manter conectado</string>
    <string name="buttonLogin">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_nav">Procon Analytics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Sair</string>
    <string name="nome">Nome</string>
    <string name="outrasop">Ou cadastre-se utilizando as seguintes contas:</string>
    <string name="forgot">Esqueceu a senha?</string>
    <string name="clique">Clique aqui</string>
    <string name="recuperar">Recuperar Senha</string>
    <string name="enviar">Enviar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="config">Configurações</string>
    <string name="save">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="confUser">Configurações de conta</string>
    <string name="savePref">Salvar Preferências</string>
    <string-array name="top10Array">
        <item>Por bairro</item>
        <item>Por combustível</item>
        <item>Por menor preço</item>
        <item>Por maior preço</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
